<resources>
    <string name="app_name">MJURental</string>
    <string name="kakao_app_key">3bda738bb83b73660b06d25fdbe7b3cf</string>

    <string name="join_email">이메일</string>
    <string name="join_password">비밀번호</string>
    <string name="join_re_password">비밀번호 재확인</string>
    <string name="join_name">이름</string>
    <string name="join_dept">학과</string>
    <string name="join_num">학번</string>
    <string name="cancle">취소</string>

    <string name="signup">회원가입</string>
    <string name="signin">로그인</string>
    <string name="email">이메일</string>
    <string name="password">패스워드</string>'

    <string name="main_time">사용시간</string>


    <string name="scan_qr_code">QR 코드 스캔하기</string>
    <string name="report_step1">step1. QR 스캔</string>
    <string name="report_step2">step2. 고장 내용 입력 (구체적으로 기입해 주세요.)</string>
    <string name="report_step3">step3. 연락처 입력</string>
    <string name="hint_report_content">고장내용 입력하기 (관리자에게 문자메세지가 전송됩니다)</string>
    <string name="report">신고하기</string>
    <string name="return_detail">대여 상세 정보</string>
    <string name="return_start">대여 시작 시간</string>


    <string name="string_return">반납하기</string>
    <string name="return_step1">step1. 블루투스 연결</string>
    <string name="return_step2">step2. 반납하기</string>
</resources>
